# fundcli

./: CLAUDE.md  README.md  pyproject.toml  todo.md
src/fundcli/: __init__.py  __main__.py  aliases.py  analyzer.py  calculator.py  cli.py  config.py  database.py  integrations.py  local_db.py  mapper.py  parser.py  unknowns.py
src/fundcli/data/: projects.toml
tests/: __init__.py  test_aliases.py  test_calculator.py  test_parser.py
