[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundcli"
version = "0.1.0"
description = "Analyze Atuin command history and recommend donations to open source projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "fragmede" }
]
keywords = ["atuin", "shell", "history", "open-source", "donations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fundcli = "fundcli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fundcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
